--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         </activity>
         <activity android:name=".OrderActivity" >
         </activity>
+
+        <activity android:name=".DetailActivity" >
+        </activity>
     </application>
 
 </manifest>
